[package]
name = "cocos2d-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
plist = "1.7"
rand = "0.8"

[[example]]
name = "game_demo"
path = "examples/game_demo.rs"

[[example]]
name = "sprite_demo"
path = "examples/sprite_demo.rs"

[[example]]
name = "physics_demo"
path = "examples/physics_demo.rs"

